# CV-VQE-Numerical-Analysis

./: main.py  prep.py  pyproject.toml
model/math/: ansatz.py  gaussian.py  hamiltonian.py  moyal.py  polynomial.py  prep.py
optimization/: LBFGSb.py  optimize.py
simulation/: simulate.py
